Fixing some minor UI issues, text wrapping and such

--- a/web/static/css/stylesheet.css
+++ b/web/static/css/stylesheet.css
@@ -489,3 +489,7 @@ span.inline {
 .table th, .table td { 
      border-top: none; 
 }
+
+.nowrap {
+    white-space:nowrap;
+}
